--- a/genGraph.ipynb
+++ b/genGraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,25 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 标准化\n",
+    "# # 标准化\n",
     "id_and_date_columns = [\"geohash_id\", \"date_id\"]\n",
     "label_columns = [\"active_index\", \"consume_index\"]\n",
     "feature_columns = node_df_train.drop(\n",
     "    id_and_date_columns + label_columns, axis=1\n",
     ").columns\n",
     "\n",
-    "feature_scaler = StandardScaler()\n",
-    "node_df_train.loc[:, feature_columns] = feature_scaler.fit_transform(\n",
-    "    node_df_train[feature_columns]\n",
-    ")\n",
-    "label_scaler = StandardScaler()\n",
-    "node_df_train.loc[:, label_columns] = label_scaler.fit_transform(\n",
-    "    node_df_train[label_columns]\n",
-    ")"
+    "# feature_scaler = StandardScaler()\n",
+    "# node_df_train.loc[:, feature_columns] = feature_scaler.fit_transform(\n",
+    "#     node_df_train[feature_columns]\n",
+    "# )\n",
+    "# label_scaler = StandardScaler()\n",
+    "# node_df_train.loc[:, label_columns] = label_scaler.fit_transform(\n",
+    "#     node_df_train[label_columns]\n",
+    "# )"
    ]
   },
   {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,21 +192,94 @@
      "text": [
       "20230104 finished\n",
       "20230105 finished\n",
-      "20230106 finished\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb 单元格 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m graphs \u001b[39m=\u001b[39m buildGraph(node_df_train, edge_df_train)\n",
-      "\u001b[1;32m/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb 单元格 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m edge_index, edge_attr \u001b[39m=\u001b[39m [], []\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mfor\u001b[39;00m _, edge \u001b[39min\u001b[39;00m edge_day_df\u001b[39m.\u001b[39miterrows():\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39m# 边可能给多了，只取存在的\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mif\u001b[39;00m (\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m         edge[\u001b[39m\"\u001b[39m\u001b[39mgeohash6_point1\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m node_ids\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m         \u001b[39mor\u001b[39;00m edge[\u001b[39m\"\u001b[39;49m\u001b[39mgeohash6_point2\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m node_ids\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m     ):\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=19'>20</a>\u001b[0m         \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=20'>21</a>\u001b[0m     edge_index\u001b[39m.\u001b[39mappend(\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21'>22</a>\u001b[0m         [\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=22'>23</a>\u001b[0m             node_ids\u001b[39m.\u001b[39mindex(edge[\u001b[39m\"\u001b[39m\u001b[39mgeohash6_point1\u001b[39m\u001b[39m\"\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=23'>24</a>\u001b[0m             node_ids\u001b[39m.\u001b[39mindex(edge[\u001b[39m\"\u001b[39m\u001b[39mgeohash6_point2\u001b[39m\u001b[39m\"\u001b[39m]),\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=24'>25</a>\u001b[0m         ]\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.60.150.62/home/liqiang/workspace/datamining/datamining_dataset_1110/graph/gat/genGraph.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m     )\n",
-      "File \u001b[0;32m~/software/miniconda3/envs/pyg/lib/python3.10/site-packages/pandas/core/series.py:1017\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1016\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, key):\n\u001b[0;32m-> 1017\u001b[0m     check_dict_or_set_indexers(key)\n\u001b[1;32m   1018\u001b[0m     key \u001b[39m=\u001b[39m com\u001b[39m.\u001b[39mapply_if_callable(key, \u001b[39mself\u001b[39m)\n\u001b[1;32m   1020\u001b[0m     \u001b[39mif\u001b[39;00m key \u001b[39mis\u001b[39;00m \u001b[39mEllipsis\u001b[39m:\n",
-      "File \u001b[0;32m~/software/miniconda3/envs/pyg/lib/python3.10/site-packages/pandas/core/indexing.py:2678\u001b[0m, in \u001b[0;36mcheck_dict_or_set_indexers\u001b[0;34m(key)\u001b[0m\n\u001b[1;32m   2666\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   2667\u001b[0m \u001b[39m    Returns\u001b[39;00m\n\u001b[1;32m   2668\u001b[0m \u001b[39m    -------\u001b[39;00m\n\u001b[1;32m   2669\u001b[0m \u001b[39m    bool\u001b[39;00m\n\u001b[1;32m   2670\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m   2671\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[1;32m   2672\u001b[0m         obj\u001b[39m.\u001b[39mstart \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   2673\u001b[0m         \u001b[39mor\u001b[39;00m obj\u001b[39m.\u001b[39mstop \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   2674\u001b[0m         \u001b[39mor\u001b[39;00m (obj\u001b[39m.\u001b[39mstep \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m obj\u001b[39m.\u001b[39mstep \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m   2675\u001b[0m     )\n\u001b[0;32m-> 2678\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcheck_dict_or_set_indexers\u001b[39m(key) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   2679\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   2680\u001b[0m \u001b[39m    Check if the indexer is or contains a dict or set, which is no longer allowed.\u001b[39;00m\n\u001b[1;32m   2681\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m   2682\u001b[0m     \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   2683\u001b[0m         \u001b[39misinstance\u001b[39m(key, \u001b[39mset\u001b[39m)\n\u001b[1;32m   2684\u001b[0m         \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mtuple\u001b[39m)\n\u001b[1;32m   2685\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39many\u001b[39m(\u001b[39misinstance\u001b[39m(x, \u001b[39mset\u001b[39m) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m key)\n\u001b[1;32m   2686\u001b[0m     ):\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "20230106 finished\n",
+      "20230107 finished\n",
+      "20230108 finished\n",
+      "20230109 finished\n",
+      "20230110 finished\n",
+      "20230111 finished\n",
+      "20230112 finished\n",
+      "20230113 finished\n",
+      "20230114 finished\n",
+      "20230115 finished\n",
+      "20230116 finished\n",
+      "20230117 finished\n",
+      "20230118 finished\n",
+      "20230119 finished\n",
+      "20230120 finished\n",
+      "20230121 finished\n",
+      "20230122 finished\n",
+      "20230123 finished\n",
+      "20230124 finished\n",
+      "20230125 finished\n",
+      "20230126 finished\n",
+      "20230127 finished\n",
+      "20230128 finished\n",
+      "20230129 finished\n",
+      "20230130 finished\n",
+      "20230131 finished\n",
+      "20230201 finished\n",
+      "20230202 finished\n",
+      "20230203 finished\n",
+      "20230204 finished\n",
+      "20230205 finished\n",
+      "20230206 finished\n",
+      "20230207 finished\n",
+      "20230208 finished\n",
+      "20230209 finished\n",
+      "20230210 finished\n",
+      "20230211 finished\n",
+      "20230212 finished\n",
+      "20230213 finished\n",
+      "20230214 finished\n",
+      "20230215 finished\n",
+      "20230216 finished\n",
+      "20230217 finished\n",
+      "20230218 finished\n",
+      "20230219 finished\n",
+      "20230220 finished\n",
+      "20230221 finished\n",
+      "20230222 finished\n",
+      "20230223 finished\n",
+      "20230224 finished\n",
+      "20230225 finished\n",
+      "20230226 finished\n",
+      "20230227 finished\n",
+      "20230228 finished\n",
+      "20230301 finished\n",
+      "20230302 finished\n",
+      "20230303 finished\n",
+      "20230304 finished\n",
+      "20230305 finished\n",
+      "20230306 finished\n",
+      "20230307 finished\n",
+      "20230308 finished\n",
+      "20230309 finished\n",
+      "20230310 finished\n",
+      "20230311 finished\n",
+      "20230312 finished\n",
+      "20230313 finished\n",
+      "20230314 finished\n",
+      "20230315 finished\n",
+      "20230316 finished\n",
+      "20230317 finished\n",
+      "20230318 finished\n",
+      "20230319 finished\n",
+      "20230320 finished\n",
+      "20230321 finished\n",
+      "20230322 finished\n",
+      "20230323 finished\n",
+      "20230324 finished\n",
+      "20230325 finished\n",
+      "20230326 finished\n",
+      "20230327 finished\n",
+      "20230328 finished\n",
+      "20230329 finished\n",
+      "20230330 finished\n",
+      "20230331 finished\n",
+      "20230401 finished\n",
+      "20230402 finished\n",
+      "20230403 finished\n"
      ]
     }
    ],
@@ -216,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,12 +299,12 @@
     "        file.close()\n",
     "\n",
     "\n",
-    "saveData(graphs, \"data/train_graphs_data.pkl\")"
+    "saveData(graphs, \"data/train_graphs_nostd_data.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,10 +374,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 标准化\n",
-    "node_df_test.loc[:, feature_columns] = feature_scaler.transform(\n",
-    "    node_df_test[feature_columns]\n",
-    ")"
+    "# # 标准化\n",
+    "# node_df_test.loc[:, feature_columns] = feature_scaler.transform(\n",
+    "#     node_df_test[feature_columns]\n",
+    "# )"
    ]
   },
   {
@@ -316,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -364,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveData(test_graphs, \"data/test_graphs_data.pkl\")"
+    "saveData(test_graphs, \"data/test_graphs_nostd_data.pkl\")"
    ]
   },
   {
@@ -380,12 +453,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveData(feature_scaler, \"saved/scaler/feature_scaler.pkl\")\n",
-    "saveData(label_scaler, \"saved/scaler/label_scaler.pkl\")\n",
+    "# saveData(feature_scaler, \"saved/scaler/feature_scaler.pkl\")\n",
+    "# saveData(label_scaler, \"saved/scaler/label_scaler.pkl\")\n",
     "saveData(edge_feature_scaler, \"saved/scaler/edge_feature_scaler.pkl\")"
    ]
   }
