--- a/CNN&DNN.ipynb
+++ b/CNN&DNN.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-11-24T16:53:15.084158200Z",
      "start_time": "2023-11-24T16:53:15.019648100Z"
-    }
+    },
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/liqiang/software/miniconda3/envs/pyg/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import torch\n",
@@ -26,30 +35,39 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "outputs": [],
-   "source": [
-    "def get_train_data():\n",
-    "    file = \"./data/train_90.csv\"\n",
-    "    train_data = pd.read_csv(file)\n",
-    "    return train_data\n",
-    "\n",
-    "def get_test_data():\n",
-    "    file = \"./data/A榜/node_test_4_A.csv\"\n",
-    "    test_data = pd.read_csv(file)\n",
-    "    return test_data"
-   ],
+   "id": "62e14f50eaa6077f",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-11-24T16:53:15.084158200Z",
      "start_time": "2023-11-24T16:53:15.041148400Z"
-    }
+    },
+    "collapsed": false
    },
-   "id": "62e14f50eaa6077f"
+   "outputs": [],
+   "source": [
+    "def get_train_data():\n",
+    "    file = \"data/raw/train_90.csv\"\n",
+    "    train_data = pd.read_csv(file)\n",
+    "    return train_data\n",
+    "\n",
+    "\n",
+    "def get_test_data():\n",
+    "    file = \"data/raw/A榜/node_test_4_A.csv\"\n",
+    "    test_data = pd.read_csv(file)\n",
+    "    return test_data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 193,
+   "id": "156e0497018991f3",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T16:53:15.111606400Z",
+     "start_time": "2023-11-24T16:53:15.055151600Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class DNN(nn.Module):\n",
@@ -85,19 +103,19 @@
     "        out = self.drop4(F.relu(self.bn4(self.fc4(out))))\n",
     "        out = self.fc5(out)\n",
     "        return out"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T16:53:15.111606400Z",
-     "start_time": "2023-11-24T16:53:15.055151600Z"
-    }
-   },
-   "id": "156e0497018991f3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 194,
+   "id": "5b966670a28cc656",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T16:53:15.113610500Z",
+     "start_time": "2023-11-24T16:53:15.071155300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
@@ -126,19 +144,19 @@
     "        out = self.drop3(F.relu(self.fc1(out)))\n",
     "        out = self.fc2(out)\n",
     "        return out"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T16:53:15.113610500Z",
-     "start_time": "2023-11-24T16:53:15.071155300Z"
-    }
-   },
-   "id": "5b966670a28cc656"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 195,
+   "id": "c68582c3d48f861a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T16:53:15.134622400Z",
+     "start_time": "2023-11-24T16:53:15.089159300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def train(model, train_loader, criterion, optimizer, scheduler, epochs=50):\n",
@@ -154,19 +172,19 @@
     "            running_loss += loss.item()\n",
     "        scheduler.step()\n",
     "        print(f'Epoch {epoch+1}/{epochs}, Loss: {running_loss/len(train_loader)}')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T16:53:15.134622400Z",
-     "start_time": "2023-11-24T16:53:15.089159300Z"
-    }
-   },
-   "id": "c68582c3d48f861a"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 196,
+   "id": "34782eaf2beacea5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T16:53:15.134622400Z",
+     "start_time": "2023-11-24T16:53:15.117858800Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def predict(model, test_data):\n",
@@ -174,19 +192,19 @@
     "    with torch.no_grad():\n",
     "        outputs = model(test_data)\n",
     "    return outputs"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T16:53:15.134622400Z",
-     "start_time": "2023-11-24T16:53:15.117858800Z"
-    }
-   },
-   "id": "34782eaf2beacea5"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 197,
+   "id": "465b9a88e56feae9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T16:53:15.689875800Z",
+     "start_time": "2023-11-24T16:53:15.133622100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,19 +233,19 @@
     "\n",
     "print(X.shape)\n",
     "print(y.shape)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T16:53:15.689875800Z",
-     "start_time": "2023-11-24T16:53:15.133622100Z"
-    }
-   },
-   "id": "465b9a88e56feae9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 198,
+   "id": "6a22be75b7474160",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T16:56:45.412292Z",
+     "start_time": "2023-11-24T16:53:15.683541400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -306,19 +324,19 @@
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
     "train(model, train_loader, criterion, optimizer, scheduler, epochs=epoch_num)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T16:56:45.412292Z",
-     "start_time": "2023-11-24T16:53:15.683541400Z"
-    }
-   },
-   "id": "6a22be75b7474160"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 199,
+   "id": "27cb097e2ca54c76",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T16:56:47.687959200Z",
+     "start_time": "2023-11-24T16:56:45.401262400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "test_dataset = TensorDataset(X_test)\n",
@@ -329,19 +347,19 @@
     "for test_data in test_loader:\n",
     "    pred = predict(model, test_data[0])\n",
     "    predictions.append(pred)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T16:56:47.687959200Z",
-     "start_time": "2023-11-24T16:56:45.401262400Z"
-    }
-   },
-   "id": "27cb097e2ca54c76"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 207,
+   "id": "a8223ac058f7769d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T17:01:24.873115200Z",
+     "start_time": "2023-11-24T17:01:24.848818100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -359,19 +377,19 @@
     "# 打印矩阵的形状和第一个元素\n",
     "print(p.shape)\n",
     "print(p[0])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T17:01:24.873115200Z",
-     "start_time": "2023-11-24T17:01:24.848818100Z"
-    }
-   },
-   "id": "a8223ac058f7769d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 208,
+   "id": "e1a2353c0afabce6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T17:01:41.981762500Z",
+     "start_time": "2023-11-24T17:01:41.948177900Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -390,19 +408,19 @@
    "source": [
     "p = scaler.inverse_transform(p)\n",
     "print(p)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T17:01:41.981762500Z",
-     "start_time": "2023-11-24T17:01:41.948177900Z"
-    }
-   },
-   "id": "e1a2353c0afabce6"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 210,
+   "id": "7cee654731034026",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-24T17:03:16.840346100Z",
+     "start_time": "2023-11-24T17:03:16.722221700Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -427,15 +445,7 @@
     "df = pd.DataFrame(data=ans, columns=[\"geohash_id\\tconsumption_level\\tactivity_level\\tdate_id\"])\n",
     "df.to_csv(\"CNN.csv\", index=False)\n",
     "print(\"finished\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T17:03:16.840346100Z",
-     "start_time": "2023-11-24T17:03:16.722221700Z"
-    }
-   },
-   "id": "7cee654731034026"
+   ]
   }
  ],
  "metadata": {
@@ -447,14 +457,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
