--- a/genGraph.ipynb
+++ b/genGraph.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
     "        file.close()\n",
     "\n",
     "\n",
-    "saveData(graphs, \"data/train_graphs_nostd_data.pkl\")"
+    "# saveData(graphs, \"data/train_graphs_nostd_data.pkl\")"
    ]
   },
   {
@@ -328,12 +328,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 读取node\n",
-    "node_df_test = pd.read_csv(\"data/raw/A榜/node_test_4_A.csv\")\n",
+    "node_df_test = pd.read_csv(\"data/raw/B榜/node_test_3_B.csv\")\n",
     "node_df_test.drop(drop_c, axis=1, inplace=True)\n",
     "with open(\"data/node_ids.pkl\", \"rb\") as file:\n",
     "    # 和训练集的node_ids保持一致\n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,16 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "edge_df_test = pd.read_csv(\"data/raw/A榜/edge_test_4_A.csv\")"
+    "edge_df_test = pd.read_csv(\"data/raw/B榜/edge_test_3_B.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,17 +417,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20230404 finished\n",
-      "20230405 finished\n",
-      "20230406 finished\n",
-      "20230407 finished\n"
+      "20230408 finished\n",
+      "20230409 finished\n",
+      "20230410 finished\n"
      ]
     }
    ],
@@ -441,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveData(test_graphs, \"data/test_graphs_nostd_data.pkl\")"
+    "saveData(test_graphs, \"data/test_graphs_nostd_data_B.pkl\")"
    ]
   },
   {
